add  my new  picture add a bakery link

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
 	Story by HTML5 UP
@@ -37,7 +38,7 @@
 							<h2>Sweet Eats Bakery</h2>
 							<p>This proyect was study on HTML and CSS.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">VIEW CODE</a></li>
+								<li><a href="https://codepen.io/barbaro21/pen/dBwaoB?editors=0100" class="button">VIEW CODE</a></li>
 							</ul>
 						</div>
 						<div class="image">
